# paragrafen-ai

./: .gitignore  ARCHITECTURE_v23_COMMITPLAN.md  DISCLAIMER.md  LICENSE  README.md  STATUSRAPPORT_socialstyrelsen_20260322.md  avvikelserapport.md  paragrafen-ai-architecture-v22.md  pyproject.toml
config/: court_filter.yaml  department_area_mapping.yaml  embedding_config.yaml  excluded_areas.yaml  forarbete_rank.yaml  legal_areas.yaml  legal_terms.yaml  modules.yaml  nja_ii_config.yaml  passive_patterns.yaml  rag_config.yaml  sfs_priority_mapping.yaml  sources.yaml
demo/: app.py
docs/: AI_WORKFLOW.md  ARCHITECTURE.md  CONTRACTS.md  DISCLAIMER.md  QA_PLAYBOOK.md  RAG_GUIDE.md  REINDEX_SOU_SPEC_v1.2.md  STARTPROMPT_reindex_sou.md  paragrafen-ai-architecture-v03.md  paragrafen-ai-architecture-v05.md  paragrafen-ai-architecture-v17.md  sfs-pipeline-stickprov-v01.md
guard/: __init__.py  area_blocker.py  confidence_gate.py  guard_pipeline.py  referral_messages.py
index/: arn_bulk_indexer.py  bet_bulk_indexer.py  chunker.py  dir_bulk_indexer.py  doktrin_indexer.py  ds_bulk_indexer.py  embedder.py  fk_foreskrift_bulk_indexer.py  jk_bulk_indexer.py  jo_bulk_indexer.py  norm_boost.py  praxis_indexer.py  prop_bulk_indexer.py  prop_indexer.py  rskr_bulk_indexer.py  sfs_indexer.py  socialstyrelsen_bulk_indexer.py  sou_bulk_indexer.py  sou_indexer.py  vector_store.py
ingest/: area_classifier.py  arn_converter.py  court_filter.py  dir_fetcher.py  doktrin_ingest.py  emrk_hudoc_fetcher.py  fetcher.py  fk_foreskrift_fetcher.py  forarbete_ingest.py  foreskrift_ingest.py  (+16 more)
(+9278 files in other folders)
